--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <style>
       @font-face {
