--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-     <!--<div class="powr-popup" id="536940ec_1669312815"></div><script src="https://www.powr.io/powr.js?platform=html"></script>-->
+    <div class="powr-popup" id="536940ec_1669312815"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
   </body>
 </html>
