adding the cashback pop up

--- a/public/index.html
+++ b/public/index.html
@@ -67,5 +67,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <div class="powr-popup" id="536940ec_1669312815"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
+    <div class="powr-popup" id="aae7d30d_1672943372"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
   </body>
 </html>
